--- a/flaskr/templates/admin.html
+++ b/flaskr/templates/admin.html
@@ -39,7 +39,7 @@
         <div class="row align-items-end">
             <!--{% from "includes/_formhelpers.html" import render_field %}-->
             <div class="col-4 text-md admin-forms font-med-bold" style="margin-top: 10px;">
-                <h1 class="display-6">Upload Images</h1>
+                <h1 class="display-6">Add a Project</h1>
             </div>
         </div>
 
@@ -48,22 +48,30 @@
             <div class="col-md-3 form-labels font-med-bold text-center" style="font-size: 20px; padding-top: 0.5%;">
                 <label>{{image_form.project.label}}</label>
             </div>
+            <div class="col-md-3 form-labels font-med-bold text-center" style="font-size: 20px; padding-top: 0.5%;">
+                <label>{{image_form.image.label}}</label>
+            </div>
+
+<!--
             <form method="post">
                  <div id="projectType" class="col-md-3 form-labels text-center">
-                    <!--<label>{{image_form.project_type(style="width:100%; height: 100%;", type="Submit")}}</label>-->
+                    &lt;!&ndash;<label>{{image_form.project_type(style="width:100%; height: 100%;", type="Submit")}}</label>&ndash;&gt;
                      <ul class="nav nav-pills nav-fill tabs">
                         <a class="nav-link active" aria-current="page" href="#" data-tab-value="#tab_1" name="new_upload">New</a>
                         <a class="nav-link" href="#" data-tab-value="#tab_2" name="existing_upload">Existing</a>
                     </ul>
                 </div>
             </form>
+-->
         </div>
     <form method="post" action="" class="" enctype="multipart/form-data">
         <div class="row justify-content-center text-md" style="font-weight: 500;">
 
+<!--
             <div class="col-md-3 form-labels" id="tab_2" data-tab-info>
                 {{ image_form.project(style="width:100%; height: 100%;") }}
             </div>
+-->
             <div class="col-md-3 form-labels active" id="tab_1" data-tab-info style="">
                 <div class="col-md form-labels">
                     {{ image_form.new_project(style="width:100%; height: 100%;", placeholder="New Project Name") }}
@@ -80,7 +88,7 @@
             </div>
 
              <div class="col-md-3 form-labels">
-                {{ render_field(image_form.image, class="form-control", style="margin-top: -5%;", multiple="multiple") }}
+                {{ image_form.image(class="form-control", style="margin-top: 5%;", multiple="multiple") }}
             </div>
         </div>
         <div class="row justify-content-center text-center">
