--- a/flaskr/templates/view_all_projects.html
+++ b/flaskr/templates/view_all_projects.html
@@ -18,12 +18,12 @@
         <div class="row">
             {% for project, thumbnail in project_data %}
             <div class="col-md-3">
-                <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}">
+                <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}">
                     <h3 class="text-center font-med-bold">{{ project[1] }}</h3>
-                    <img class="d-block w-100" style="max-height: 50%;" src="{{ thumbnail }}" alt="{{ thumbnail }}">
+                    <img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="{{ thumbnail }}">
                 </a>
                 <button class="btn btn-default" style="">
-                  <form action="{{ url_for('blueprint.delete_project', project_id=project[0], project_name=project[1]) }}" method="post">
+                  <form action="{{ url_for('blueprint.delete_project', project_id=project[0]) }}" method="post">
                       <input type="submit" value="Delete" name="delete-button" onclick="return confirm('Are you sure you want to delete this project?');" class="btn btn-danger">
                   </form>
                 </button>
