--- a/flaskr/templates/view_project.html
+++ b/flaskr/templates/view_project.html
@@ -25,7 +25,7 @@
     <form method="post" action="" class="" enctype="multipart/form-data">
         <div class="row justify-content-center text-md" style="font-weight: 500;">
             <div class="col-md-3 form-labels">
-                    {{ render_field(image_form.image, class="form-control", style="margin-top: -5%;", multiple="multiple") }}
+                    {{ image_form.image(class="form-control", style="", multiple="multiple") }}
             </div>
         </div>
         <div class="row justify-content-center text-center">
@@ -42,15 +42,15 @@
     <!-- images from static/uploads -->
 <div class="container-md image-container" style="clear:both;">
     <div class="row justify-content-evenly">
-        {% for photo in all_photos %}
+        {% for photo in photos %}
         <div class="col-md-4 text-center">
             <div>
                 <div>
-                    <img class="d-block w-100" src="{{ url_for('static', filename=photo[0]) }}" alt="{{ i }}">
+                    <img class="d-block w-100" src="{{photo.image_path}}" alt="">
                 </div>
             </div>
             <div class="btn btn-default">
-              <form action="{{ url_for('blueprint.delete_image', project_name=project_name, filename=photo[1]) }}" method="post">
+              <form action="{{ url_for('blueprint.delete_image', image_id=photo.image_id, project_id=photo.project_id, filename=photo.filename) }}" method="post">
                   <input type="submit" value="Delete" name="delete-button" onclick="return confirm('Are you sure you want to delete this image?');" class="btn btn-danger">
               </form>
             </div>
