--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -15,11 +15,11 @@
     <!--gallery title banner-->
 
     {% include 'includes/_messages.html' %}
-    <header class="container-md" style="position:relative; max-width: 100%;">
+    <header class="container-md" style="position:relative; max-width: 100%; width:100%;">
         <div class="row">
             <p class="text-lg"><a id="" href="{{ curr_url }}">Project URL: {{project_name}}</a></p>
         </div>
-        <div class="row justify-content-center" style="">
+        <div class="row justify-content-center " style="">
                 <!--preview carousel-->
             <div id="previewCarousel" class="carousel slide" data-bs-ride="carousel">
                 <!--indicators-->
@@ -31,11 +31,11 @@
                 </div>
 
                 <!--the slideshow-->
-                <div class="carousel-inner" style="object-fit: cover;">
+                <div class="carousel-inner">
                     {% for photo in images %}
                     <div {% if photo == first_photo %} class="carousel-item active" {% else %} class="carousel-item" {% endif %}
                             style="">
-                        <img class="img-fluid" src="{{ photo.image_path }}" alt="{{ photo.filename }}" style="">
+                        <img class="d-block w-100" src="{{ photo.image_path }}" alt="{{ photo.filename }}"  style="">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="container-md">
                                 <div class="row justify-content-center">
@@ -67,6 +67,7 @@
         </div>
     </header>
 
+    <!--dropdowns-->
     <div class="container-md" style="max-width: 100%; padding: 20px">
 
             <div class="row justify-content-between">
@@ -85,17 +86,16 @@
                 <div class="col-md-4">
                     {{ form.filter_by(onchange="this.form.submit();") }} <!--onchange="this.form.submit();"-->
                 </div>
-
         </div>
-
         </form>
     </div>
 
-    <!--projects-->
+    {{ pagination.info }}
+    <!--p rojects-->
     <div class="image-container container-md" style="max-width:100%;">
         <div class="row justify-content-evenly">
             {% for project, thumbnail in project_data %}
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 20px;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
                 <div class="row justify-content-center text-center">
                     <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
                         <h3 class="text-center font-med-bold">{{ project[1] }}</h3>
