finalized binding of testimonials and projects through email & began work on adding content and home page

--- a/flaskr/templates/admin.html
+++ b/flaskr/templates/admin.html
@@ -137,7 +137,7 @@
                 <tr>
                     <!--<th scope="row">1</th>-->
                   <td class="testimonial-column">
-                      <h3>{{i.name}}<small class="text-muted"> ({{ email }}) </small></h3>
+                      <h3>{{i.name}}<small class="text-muted"> ({{ i.email }}) </small></h3>
                       <p><i> {{i.town}}, NH</i></p>
                       <p class="testimonial-content text-center">"{{i.message}}"</p>
                   </td>
