--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -415,3 +415,20 @@ p
     left: 0;
     min-height: 500px;
 }*/
+
+
+.carousel .carousel-item {
+  height: 500px;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    min-height: 500px;
+}
+
+.project:hover {
+    opacity: 0.5;
+}
