--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -37,11 +37,28 @@
                         <h2 class="display-6">View Our Projects</h2>
                     </div>
                 </div>
-                <div class="row justify-content-center text-center" style="margin-top: 2%;">
+                <div class="row justify-content-evenly text-center" style="margin-top: 2%;">
                     <!--for loop goes here for recent projects-->
-                    <div class="col-md">
+                    {% for project, thumbnail in project_data %}
+                    <div class="col-md-3">
+                        <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
+                            <div class="" style="height: 12rem; padding: 20px; background-image: url('{{ thumbnail }}'); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
+                                <div class="row justify-content-center text-center">
+                                    <div class="col-sm" style="padding-left: 5%; padding-right: 5%; padding-bottom: 5%; padding-top: 0px;">
+                                        <button class="buttons btn btn-outline-primary"
+                                            data-callback='onSubmit'
+                                            data-action='submit'>View Project</button>
+                                    </div>
+                                </div>
+                                <div class="row justify-content-center text-center project">
+                                    <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
 
+                                </div>
+                            </div>
+                        </a>
                     </div>
+                    {% endfor %}
+
                 </div>
             </div>
         </div>
