--- a/flaskr/templates/testimonials.html
+++ b/flaskr/templates/testimonials.html
@@ -20,13 +20,16 @@
     </header>
 
     <!--testimonials-->
-    <div class="container testimonial-container">
+    <div class="container testimonial-container" style="max-width: 100%;">
         <!--for loop would go here for testimonials, row by row-->
         {% for i in testimonials %}
         <div class="row justify-content-center text-center">
             <div class="col-md text-md" style="padding: 3% 120px;"> <!--top right bottom left-->
                 <p style="padding-b: 2%;">"{{ i.message }}"</p>
+
                 <p><strong>{{ i.name }}</strong> - {{ i.town }}, NH</p>
+                <p><a href="{{ url_for('blueprint.view_project', project_id=i.project_id) }}">View the Project</a></p>
+                <p>{{ i.project_path }}</p>
                 {% if session.logged_in %}
                 <td class="btn btn-default">
                   <form action="{{ url_for('blueprint.delete_testimonial', testimonial_id=i.testimonial_id) }}" method="post">
