--- a/flaskr/templates/view_all_projects.html
+++ b/flaskr/templates/view_all_projects.html
@@ -18,7 +18,7 @@
         <div class="row">
             {% for project, thumbnail in project_data %}
             <div class="col-md-3">
-                <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}">
+                <a href="{{ url_for('blueprint.view_project_admin', project_id=project[0]) }}">
                     <h3 class="text-center font-med-bold">{{ project[1] }}</h3>
                     <img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="{{ thumbnail }}">
                 </a>
