--- a/flaskr/templates/view_project.html
+++ b/flaskr/templates/view_project.html
@@ -3,41 +3,57 @@
 
 {% block body %}
 
- <div class="container-md text-center">
-    <header>
-        <div class="row justify-content-start">
-            <div class="col-md-auto title_container">
-                <h1 class="display-4 screen_titles"><strong>Uploaded Images for {{ project_name }}</strong></h1>
+ <div class="container-md text-center" style="max-width: 100%;">
+        {% include 'includes/_messages.html' %}
+    <header class="container-md" style="position:relative; max-width: 100%;">
+        <div class="row justify-content-center " style="">
+                <!--preview carousel-->
+            <div id="previewCarousel" class="carousel slide" data-bs-ride="carousel">
+                <!--indicators-->
+                <div class="carousel-indicators">
+                    {% for n in enumerated_photos %}
+                    <button type="button" data-bs-target="#previewCarousel" data-bs-slide-to="{{ n }}" aria-label="Slide {{ n }}"
+                            {% if n == 0 %} class="active" aria-current="true" {% else %} {% endif %}></button>
+                    {% endfor %}
+                </div>
+
+                <!--the slideshow-->
+                <div class="carousel-inner">
+                    {% for photo in photos %}
+                    <div {% if photo == first_photo %} class="carousel-item active" {% else %} class="carousel-item" {% endif %}
+                            style="">
+                        <img class="d-block w-100" src="{{ photo.image_path }}" alt="{{ photo.filename }}"  style="height: 50%;">
+                        <div class="carousel-caption">
+                            <div class="container-md">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-6" style="padding-bottom: 22.0rem;">
+                                        <div style="background-color: rgba(255,255,255,.4);">
+                                            <h1 style="font-weight: 600;" class="text-dark">{{ project_name }}</h1>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    <!-- Left and right controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#previewCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#previewCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+
+                </div>
             </div>
         </div>
     </header>
-    <hr>
+
 </div>
 
-{% from "includes/_formhelpers.html" import render_field %}
-<div class="container-md" style="margin-bottom: 20px;">
-    <div class="row align-items-end justify-content-center">
-        <div class="col-4 text-md admin-forms font-med-bold text-center" style="margin-top: 10px;">
-            <h1 class="display-6">Upload Images</h1>
-        </div>
-    </div>
 
-    <form method="post" action="" class="" enctype="multipart/form-data">
-        <div class="row justify-content-center text-md" style="font-weight: 500;">
-            <div class="col-md-3 form-labels">
-                    {{ image_form.image(class="form-control", style="", multiple="multiple") }}
-            </div>
-        </div>
-        <div class="row justify-content-center text-center">
-            <div class="col-md">
-                <button class="buttons btn btn-outline-primary"
-                    data-callback='onSubmit'
-                    data-action='submit'
-                    name="upload-image">Upload</button>
-            </div>
-        </div>
-    </form>
-</div>
 
     <!-- images from static/uploads -->
 <div class="container-md image-container" style="clear:both;">
@@ -46,14 +62,18 @@
         <div class="col-md-4 text-center">
             <div>
                 <div>
-                    <img class="d-block w-100" src="{{photo.image_path}}" alt="">
+                    <a href="{{ url_for('blueprint.view_image', image_id=photo.image_id) }}">
+                        <img class="d-block w-100" src="{{photo.image_path}}" alt="photo.filename">
+                    </a>
                 </div>
             </div>
+            {% if session.logged_in %}
             <div class="btn btn-default">
               <form action="{{ url_for('blueprint.delete_image', image_id=photo.image_id, project_id=photo.project_id, filename=photo.filename) }}" method="post">
                   <input type="submit" value="Delete" name="delete-button" onclick="return confirm('Are you sure you want to delete this image?');" class="btn btn-danger">
               </form>
             </div>
+            {% endif %}
         </div>
         {% endfor %}
     </div>
