--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -15,13 +15,17 @@ body
   /*font-family: Manrope, Sans-serif;*/
   font-family: Arial, Helvetica, sans-serif;
   /*font-family: Verdana, sans-serif;*/
-  font-size: 19px;
+  font-size: 22px;
   font-weight: 400;
   line-height: 1.5em;
-  width: 100%;
-  min-height: 100vh;
-  /*height: 100%;*/
+  width: 100vw;
   height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  max-width: 100%;
+  max-height: 100vh;
+
   display: flex;
   flex-direction: column;
 }
@@ -39,9 +43,7 @@ p
 
 
 
-.main-content {
-    padding-top: 0px;
-}
+
 
 .form-container {
     text-align: center
@@ -120,7 +122,9 @@ p
         font-weight: 600;
         font-size: 0.8rem;
         text-align: center;
-        width: 95%;
+        background-color: rgba(240, 240, 240, 1.0);
+        padding-top:5%;
+        margin: 0;
       /*  font-family: var(--work-sans);
       font-weight: 300;
       font-size: 1rem;
@@ -133,13 +137,17 @@ p
       margin-bottom: 0px;
       height: 50px;
       width: 100%;
-      *//*background-color: black;*//*
       box-sizing: border-box;
       padding: 1em;*/
     }
 
   .text-lg {
     font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .text-xl {
+    font-size: 1.2rem;
     line-height: 1.75rem;
   }
 
@@ -159,12 +167,12 @@ p
 
   .container div {
     padding: 2px;
-    border: 1px solid #000000;
+    /*border: 1px solid #000000;*/
   }
 
   .container-md div {
     padding: 2px;
-    border: 1px solid #000000;
+    /*border: 1px solid #000000;*/
   }
 
   .buttons {
@@ -254,23 +262,6 @@ p
 }
 
 
-.home-bg-image {
-      background-image: /*linear-gradient(rgba(0, 0, 255, 0.5),rgba(255, 255, 0, 0.5)),*/ url("../images/pexels-binyamin-mellish-lg.jpg");
-      /*height: 100vh;*/
-      background-size: cover;
-      background-repeat: no-repeat;
-      max-width: 100%;
-      height: auto;
-      background-position: center;
-      /*background-position: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
-      font-weight: bold;*/
-}
 
 
 .carousel-image {
@@ -285,11 +276,31 @@ p
     background-position: 50% 50%;
      max-width: 100%;
      padding: 0px;
+     height : 100vh;
 }
 
-.home-projects-container {
+.info-sections {
     max-width: 100%;
     margin-top: 5%;
+    background-color: white;
+    height: auto;
+}
+
+.services-subsection {
+    margin-top: 5%;
+    background-color: white;
+}
+
+
+
+.home-main-content {
+     background-image: url("../background-images/IMG_7829.JPG");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    max-width: 100%;
+    max-height: 100vh;
+    padding: 0px;
 
 }
 
@@ -297,10 +308,15 @@ p
     max-width: 100%;
 }
 
-.home-testimonials-container {
+.testimonial-content {
+    /*background-image: url("../background-images/IMG_7823.JPG");*/
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
     max-width: 100%;
-    margin-top: 5%;
-    margin-bottom: 10%;
+    max-height: 100vh;
+    padding: 0px;
+
 }
 
 .testimonial-banner {
@@ -316,6 +332,7 @@ p
 
 .testimonial-container {
     max-width: 100%;
+    background-color: rgba(240, 240, 240, 0.7);
 }
 
 
@@ -429,6 +446,22 @@ p
     min-height: 500px;
 }
 
+
 .project:hover {
-    opacity: 0.5;
+    opacity: 0.8;
 }
+
+
+#info {
+    opacity: 0.0;
+}
+
+#project:hover + #info{
+    opacity: 1.0;
+
+}
+
+/*
+.project:hover + .thumbnail {
+    opacity: 0.5;
+}*/
