--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -20,28 +20,33 @@
     </header>
 
     <!--contact info-->
-    <div class="container contact-content fill-height" style="max-height: 100%;">
+    <div class="container contact-content fill-height" style="max-height: 100%; max-width: 100%;">
         <div class="row content justify-content-center">
-            <div class="col-4 p-3 contact-left-column">
-                <p class="text-md" style="">Call:
-                    <a href="tel:603-235-7427" class="font-weight-lighter text-dark" style="text-decoration:none">
-                        (603) 235-7427</a>
-                </p>
-                <p class="text-md">Email:
-                    <a href="mailto:allangilbertbuilders@gmail.com" class="font-weight-lighter text-dark" style="text-decoration:none">
-                        allangilbertbuilders@gmail.com
+            <div class="row justify-content-between">
+                <div class="col-md-4" style="margin-top: 5%;">
+                    <p class="text-md" style="">Call:
+                        <a href="tel:603-235-7427" class="font-weight-lighter text-dark" style="text-decoration:none">
+                            (603) 235-7427</a>
+                    </p>
+                    <p class="text-md">Email:
+                        <a href="mailto:allangilbertbuilders@gmail.com" class="font-weight-lighter text-dark" style="text-decoration:none">
+                            allangilbertbuilders@gmail.com
+                        </a>
+                    </p>
+                    <p style=""><small>Follow us on Facebook</small></p>
+                    <a class="" style="text-decoration:none" href="https://www.facebook.com/allangilbertbuilders/">
+                        <i class="fab fa-facebook fa-lg social-icons"></i>
                     </a>
-                </p>
-                <p style=""><small>Follow us on Facebook</small></p>
-                <a class="" style="text-decoration:none" href="https://www.facebook.com/allangilbertbuilders/">
-                    <i class="fab fa-facebook fa-lg social-icons"></i>
-                </a>
+                    </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="{{ url_for('static', filename='contact-images/award.jpg') }}" alt="" style="height: 70%;">
+                </div>
             </div>
 
-            <div class="col-4 p-3 contact-right-column" style="text-align: right;">
-                <p>Hours of Operation </p>
-                <p>Monday - Friday, 8:00am - 5:00pm</p>
-            </div>
+        </div>
+        <div class="row justify-content-between">
+            <p>Hours of Operation </p>
+            <p>Monday - Friday, 8:00am - 5:00pm</p>
         </div>
     </div>
 
