--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -67,7 +67,7 @@
     </header>
 
     <!--dropdowns-->
-    <div class="container-md" style="max-width: 100%; padding: 20px">
+    <div class="container-md project" style="max-width: 100%; padding: 20px">
         <form name="dropdown_form" method="POST" action="{{ url_for('blueprint.gallery', page='1') }}">
             <div class="row justify-content-between">
                 <div class="col-md-4">
@@ -89,22 +89,22 @@
         </form>
     </div>
 
+
     <!--projects-->
     <div class="image-container container-md" style="max-width:100%;">
         <div class="row justify-content-evenly">
             {% for project, thumbnail in project_data %}
-            <div class="col-md-4" style="padding: 20px;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
+            <div class="col-md-4 img-thumbnail"  style="padding: 30px 30px; background-image: url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
                 <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
-                <div class="row justify-content-center text-center project">
-
-                        <h3 class="text-center font-med-bold">{{ project[1] }}</h3>
-                        <p>{{ project[4] }}, NH</p>
-                        <img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">
+                <div class="row justify-content-center text-center" style="background-color: #f0f0f0; opacity: 0.8;">
+                    <h4 class="text-center font-med-bold">{{ project[1] }}</h4>
+                    <p class="">{{ project[4] }}, NH</p>
+                    <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
 
                 </div>
                 <div class="row justify-content-center text-center">
                     <div class="col-sm" style="padding-left: 5%; padding-right: 5%;">
-                        <button class="buttons btn btn-outline-primary"
+                        <button class="buttons btn btn-primary"
                             data-callback='onSubmit'
                             data-action='submit'>View Project</button>
                     </div>
@@ -120,7 +120,6 @@
                 {% endif %}
 
             </div>
-
             {% endfor %}
             {{ pagination.links }}
         </div>
