--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -5,85 +5,91 @@
         <link rel="preload" href="" as="image"/>
     {% endblock %}
     {% block body %}
-    <div id="main-content" class="main-content" style="">
-        <!--home banner-->
-        <div class="container home-banner">
-            {% include 'includes/_messages.html' %}
-            <div class="container-md">
-                <div class="row justify-content-center text-center" style="padding-top: 10%;">
-                    <div class="col-md" style="">
-                        <h1 style="font-weight: 600;">Allan Gilbert Builders</h1>
-                    </div>
-                </div>
-                <div class="row justify-content-center text-center" style="margin-top: 1%;">
-                    <div class="col-md">
-                        <h3>{ About Business }</h3>
-                    </div>
-                </div>
-                <div class="row justify-content-center text-center home-banner-button" style="padding-top: 30%; padding-bottom: 10%;">
-                    <div class="col-md">
-                        <button class="buttons btn btn-primary"
-                            data-callback='onSubmit'
-                            data-action='submit'>Visit the Gallery</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--projects preview-->
-        <div class="container home-projects-container">
-            <div class="container-md project-content">
-                <div class="row justify-content-center text-center">
-                    <div class="col-md">
-                        <h2 class="display-6">View Our Projects</h2>
-                    </div>
-                </div>
-                <div class="row justify-content-evenly text-center" style="margin-top: 2%;">
-                    <!--for loop goes here for recent projects-->
-                    {% for project, thumbnail in project_data %}
-                    <div class="col-md-3">
-                        <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
-                            <div class="" style="height: 12rem; padding: 20px; background-image: url('{{ thumbnail }}'); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
-                                <div class="row justify-content-center text-center">
-                                    <div class="col-sm" style="padding-left: 5%; padding-right: 5%; padding-bottom: 5%; padding-top: 0px;">
-                                        <button class="buttons btn btn-outline-primary"
-                                            data-callback='onSubmit'
-                                            data-action='submit'>View Project</button>
-                                    </div>
-                                </div>
-                                <div class="row justify-content-center text-center project">
-                                    <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
+    <div id="" class="home-main-content">
 
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    {% endfor %}
-
-                </div>
-            </div>
-        </div>
-        <!--testimonials preview-->
-        <div class="container-md home-testimonials-container">
-            <a href="{{ url_for('blueprint.testimonials') }}" style="text-decoration: none;">
-            <div class="row justify-content-center text-center">
+        <!--welcome preview-->
+        <div class="container-md info-sections" style="">
+            <div class="row justify-content-center">
                 <div class="col-md">
-                    <h2 class="display-6 text-dark">
-                        Read Our Testimonials
-                    </h2>
+                    <p>WELCOME</p>
                 </div>
             </div>
-            <div class="row justify-content-evenly text-center" style="margin-top: 2%;">
-                {% for i in testimonials %}
-                <div class="col-sm-5 text-sm text-dark" style=""> <!--top right bottom left-->
-                    <p>"{{ i.message[:300] + '...' }}"</p>
-                    <p class="font-med-bold" style="margin-bottom: 0%;">{{ i.name }}</p>
-                    <p>{{ i.town }}, NH</p>
+            <div class="row">
+                <div class="col-md">
+                    <p>
+                    At Allan Gilbert Builders, we are more than just builders; we are artisans
+                    dedicated to creating exceptional living spaces. With over three decades
+                    of experience, we’ve been transforming dreams into beautifully
+                    constructed homes which reflect individuality and sophistication.
+                    </p>
                 </div>
-                {% endfor %}
             </div>
-            </a>
         </div>
-
+        <!--about-->
+        <div class="container-md info-sections" style="max-width: 100%;">
+            <div class="row justify-content-center">
+                <div class="col-md">
+                    <p>ABOUT US</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    Our story is one of passion, craftsmanship and a commitment to
+                    excellence. A family owned and operated business, three generations
+                    and growing, we have been dedicated to crafting exceptional living
+                    spaces for our clients surrounding the lakes region.
+                </div>
+            </div>
+        </div>
+                <!--services-->
+        <div class="container-md info-sections" style="margin-bottom: 20;">
+            <div class="row justify-content-center">
+                <div class="col-md">
+                    <p>OUR SERVICES</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    At Allen Gilbert Builders, we take pride in offering a comprehensive
+                    range of construction and remodeling services tailored to meet your
+                    unique needs and preferences. Our experienced team of professionals is
+                    dedicated to delivering quality craftsmanship and innovative solutions
+                    for every project. Explore our services below:
+                </div>
+            </div>
+            <!--home building-->
+            <div class="container-md services-subsection">
+                <div class="row">
+                    <div class="col-md">
+                        <p>HOME BUILDING</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md">
+                        <p>
+                            We specialize in building custom homes that are not just structure but
+                            reflections of your lifestyle and personality.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!--general contracting-->
+            <div class="container-md services-subsection">
+                <div class="row">
+                    <div class="col-md">
+                        <p>GENERAL CONTRACTING</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md">
+                        <p>
+                            Our team ensures that every aspect of your project is executed with
+                            precision and care.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
