added styling changes to screens, removed auto resolution change in upload controller, and beginning work on creating a separate upload form for carousel photos

--- a/flaskr/static/css/navbar.css
+++ b/flaskr/static/css/navbar.css
@@ -1,10 +1,10 @@
 :root {
-    /*--brokerColor: #670038;*/
+    --backgroundColor: #E3EDF0;
 }
 
 .navbar_layout {
-    /*background-color: var(--brokerColor);*/
-    font-size: 17px;
+    /*background-color: var(--backgroundColor);*/
+    font-size: 20px;
     padding-left: 0px;
     padding-right: 0px;
     padding-top: 5px;
