--- a/flaskr/templates/view_project.html
+++ b/flaskr/templates/view_project.html
@@ -63,7 +63,7 @@
             <div>
                 <div>
                     <a href="{{ url_for('blueprint.view_image', image_id=photo.image_id) }}">
-                        <img class="d-block w-100" src="{{photo.image_path}}" alt="photo.filename">
+                        <img class="img-thumbnail" src="{{photo.image_path}}" alt="photo.filename">
                     </a>
                 </div>
             </div>
