--- a/flaskr/templates/view_project_admin.html
+++ b/flaskr/templates/view_project_admin.html
@@ -46,7 +46,7 @@
         <div class="col-md-4 text-center">
             <div>
                 <div>
-                    <img class="d-block w-100" src="{{photo.image_path}}" alt="">
+                    <img class="img-thumbnail" src="{{photo.image_path}}" alt="">
                 </div>
             </div>
             <div class="btn btn-default">
