--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -13,7 +13,7 @@ body
   background-color: #FFFFFF;
   /*font-family:Tahoma;*/
   /*font-family: Manrope, Sans-serif;*/
-  font-family: Arial, Helvetica, sans-serif;
+ /* font-family: Arial, Helvetica, sans-serif;*/
   /*font-family: Verdana, sans-serif;*/
   font-size: 22px;
   font-weight: 400;
@@ -33,6 +33,7 @@ body
 
 p
 {
+    font-size: 1.4rem;
     /*display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -60,7 +61,7 @@ p
 
 
 .screen_titles {
-    color: var(--brandColor);
+    /*color: white;*/
 }
 
 .title_container {
@@ -123,7 +124,6 @@ p
         font-size: 0.8rem;
         text-align: center;
         background-color: rgba(240, 240, 240, 1.0);
-        padding-top:5%;
         margin: 0;
       /*  font-family: var(--work-sans);
       font-weight: 300;
@@ -281,49 +281,48 @@ p
 
 .info-sections {
     max-width: 100%;
-    margin-top: 5%;
+    margin-top: 8rem;
     background-color: white;
     height: auto;
+    padding: 10px 50px;
 }
+
+.info-sections-title {
+    padding-top: 10px;
+}
+
+
+.info-title-hr {
+    overflow: visible; /* For IE */
+    max-width: 10%;
+    padding: 0;
+    /*border: 2px solid;*/
+    border-top: medium double;
+    /*color: #333;*/
+    text-align: center;
+
+}
+
 
 .services-subsection {
     margin-top: 5%;
     background-color: white;
 }
 
-
-
-.home-main-content {
-     background-image: url("../background-images/IMG_7829.JPG");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    max-width: 100%;
-    max-height: 100vh;
-    padding: 0px;
-
+.services-subsection-title {
+    padding-top: 10px;
 }
 
 .project-content {
     max-width: 100%;
 }
 
-.testimonial-content {
-    /*background-image: url("../background-images/IMG_7823.JPG");*/
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    max-width: 100%;
-    max-height: 100vh;
-    padding: 0px;
-
-}
 
 .testimonial-banner {
-    background-image: url("../home-images/post-placeholder.jpg");
+    background-image: url("../banner-photos/chairs-flipped.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 10% 65%;
     max-width: 100%;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -337,42 +336,22 @@ p
 
 
 .contact-banner {
-    background-image: url("../home-images/post-placeholder.jpg");
+    background-image: url("../contact-images/eIW2AkUZSQi8Ih9ghpNDxw.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 80% 80%;
     max-width: 100%;
     padding-top: 5%;
     padding-bottom: 5%;
 
 }
 
-
-.contact-content {
-   /* background-image: url("../contact-images/IMG_2872.jpg");*/
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    margin-top: 2%;
-    max-width: 100%;
+.contact-link{
+    text-decoration: none;
 }
 
-.fill-height {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-}
-
-.contact-left-column {
-    flex:1 1 40%;
-    position: relative;
-    min-width:320px;
-}
-
-.contact-right-column {
-    flex:1 1 40%;
-    position: relative;
-    min-width:320px;
+.contact-link:hover {
+    text-decoration: underline;
 }
 
 
@@ -465,3 +444,7 @@ p
 .project:hover + .thumbnail {
     opacity: 0.5;
 }*/
+
+
+/*social buttons*/
+/* Facebook */
