--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -67,48 +67,43 @@
     </header>
 
     <!--dropdowns-->
-    <div class="container-md project" style="max-width: 100%; padding: 20px">
+    <div class="container-md" style="max-width: 100%; padding-top: 2%; background-color: rgba(255, 255, 255, 0.8);">
         <form name="dropdown_form" method="POST" action="{{ url_for('blueprint.gallery', page='1') }}">
             <div class="row justify-content-between">
-                <div class="col-md-4">
-                    {{ form.sort_by.label }}
+                <div class="col-md-2" style="text-align: center; padding: 0px 20px;">
+                    <p class="text-lg">{{ form.sort_by.label }}</p>
+                    <p class="text-lg">{{ form.sort_by(onchange="this.form.submit();") }}</p>
                 </div>
-                <div class="col-md-4">
-                    {{ form.filter_by.label }}
+                <div class="col-md-3" style="text-align: center; padding: 0px 20px;">
+                    <p class="text-lg">{{ form.filter_by.label }}</p>
+                    <p class="text-lg">{{ form.filter_by(onchange="this.form.submit();") }}</p>
+
                 </div>
             </div>
 
-            <div class="row justify-content-between">
-                <div class="col-md-4">
-                    {{ form.sort_by(onchange="this.form.submit();") }}
-                </div>
-                <div class="col-md-4">
-                    {{ form.filter_by(onchange="this.form.submit();") }} <!--onchange="this.form.submit();"-->
-                </div>
-            </div>
         </form>
     </div>
 
 
     <!--projects-->
-    <div class="image-container container-md" style="max-width:100%;">
-        <div class="row justify-content-evenly">
+    <div class="container-md" style="max-width:100%; padding: 0px 20px;">
+        <div class="row justify-content-center">
             {% for project, thumbnail in project_data %}
-            <div class="col-md-4 img-thumbnail"  style="padding: 30px 30px; background-image: url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
+            <div class="col-md-4 img-thumbnail" style="padding: 15px 15px; margin-top: 3%; margin-bottom: 3%; background-image: url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
                 <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
-                <div class="row justify-content-center text-center" style="background-color: #f0f0f0; opacity: 0.8;">
-                    <h4 class="text-center font-med-bold">{{ project[1] }}</h4>
-                    <p class="">{{ project[4] }}, NH</p>
-                    <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
+                    <div class="row justify-content-center text-center" style="background-color: #f0f0f0; opacity: 0.8;">
+                        <h5 class="text-center font-med-bold">{{ project[1] }}</h5>
+                        <p class="text-md">{{ project[4] }}, NH</p>
+                        <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
 
-                </div>
-                <div class="row justify-content-center text-center">
-                    <div class="col-sm" style="padding-left: 5%; padding-right: 5%;">
-                        <button class="buttons btn btn-primary"
-                            data-callback='onSubmit'
-                            data-action='submit'>View Project</button>
                     </div>
-                </div>
+                    <div class="row text-center" style="margin-top: 10%;">
+                        <div class="col-sm">
+                            <button class="buttons btn btn-primary"
+                                data-callback='onSubmit'
+                                data-action='submit'>View Project</button>
+                        </div>
+                    </div>
                 </a>
 
                 {% if session.logged_in %}
