--- a/flaskr/templates/includes/_navbar.html
+++ b/flaskr/templates/includes/_navbar.html
@@ -2,11 +2,15 @@
 
 <nav class="navbar sticky-top navbar-expand-md navbar_layout bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" style="" href="/">Logo</a>
+        <a class="navbar-brand text-center" style="" href="/">
+            <img src="{{ url_for('static', filename='logo/FullLogo_Transparent_NoBuffer.png') }}" alt="" width="80" height="80">
+        </a>
 
+<!--
         <span class="navbar-text font-med-bold text-xl">
             Allan Gilbert Builders
         </span>
+-->
 
       <!-- condensed menu button for smaller screens -->
         <button class="navbar-toggler justify-content-end" data-bs-theme="light" type="button" data-bs-toggle="collapse"
@@ -39,7 +43,7 @@
 		{% set active_page = active_page|default('home') -%}
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-          <div class="navbar-nav" id="navigation">
+          <div class="navbar-nav" id="navigation" style="text-align: right;">
                 {% for href, id, caption in navigation_bar %}
                     <a {% if id == active_page %} class="nav-link active text-black-50" {% else %} class="hover nav-link text-dark" {% endif %} href="{{ href|e }}">
                         {{ caption|e }}
